get rid of readString and writeString for android api 33 compat